page flicker fix

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -526,3 +526,7 @@ body.home [class*="featuredProjectWrapper"] [class*="projectWrapper"] img {
         padding-left: 20px;
     }
 }
+
+.hidden {
+    display: none;
+}
